--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html{
+    font-family:'Lilita One', sans-serif;
+}
 #title{
     font-family:'Lilita One', sans-serif;
     color: #E53170;
@@ -18,8 +20,45 @@
     font-size: 23px;
 }
 
-main{
+
+.clearfix{
+    content: "";
+    clear: both;
+    display:table;
+    }
+
+.float{
+        float: left;
+    }
+
+.principale{
     width: 70%;
-    margin: 0 auto;
-    border: 1px solid black;
+    margin: 50px auto 0;
+}
+
+.row{
+    float: left;
+    width: calc(100%/3);
+}
+
+img{
+    width: 25%;
+}
+
+.scheda{
+    height: 109px;
+    width: 60%;
+
+    background-color: #0F0E17;
+    color: white;
+    line-height: 33px;
+    box-shadow: 2px 2px 2px 2px rgba(128, 127, 127, 0.493);
+}
+
+h3, a, div>p{
+    margin-left: 17px;
+}
+
+a{
+    color: #00A9F4;
 }
