--- a/assets/style.css
+++ b/assets/style.css
@@ -56,10 +56,14 @@ img{
     box-shadow: 2px 2px 2px 2px rgba(128, 127, 127, 0.493);
 }
 
-h3, a, div>p{
+.name, a, div>p{
     margin-left: 17px;
 }
 
 a{
     color: #00A9F4;
+}
+
+.name{
+    font-size: 18px;
 }
